--- a/themes/next/source/css/_schemes/Pisces/_menu.styl
+++ b/themes/next/source/css/_schemes/Pisces/_menu.styl
@@ -29,7 +29,7 @@
     &:hover {
       background: #f9f9f9;
       border-bottom-color: white;
-	  color: #f44336; 
+	  color: $custem-show; 
     }
   }
 
