--- a/themes/next/source/css/_common/components/buttons.styl
+++ b/themes/next/source/css/_common/components/buttons.styl
@@ -12,7 +12,7 @@
   line-height: 2;
 
   &:hover {
-    border-color: #f44336;
+    border-color: $custem-show;
     color: $btn-default-hover-color;
     background: #272822;
   }
